seaqt/QtGui/gen_qwindow.h

class QMetaObject;
class QScreen;
class QWindow;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QExposeEvent QExposeEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QResizeEvent QResizeEvent;
typedef struct QScreen QScreen;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QSurfaceFormat QSurfaceFormat;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QTouchEvent QTouchEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWindow QWindow;
void QWindow_connect_heightChanged(QWindow* self, intptr_t slot);
void QWindow_minimumWidthChanged(QWindow* self, int arg);
void QWindow_connect_minimumWidthChanged(QWindow* self, intptr_t slot);
void QWindow_minimumHeightChanged(QWindow* self, int arg);
void QWindow_connect_minimumHeightChanged(QWindow* self, intptr_t slot);
void QWindow_maximumWidthChanged(QWindow* self, int arg);
void QWindow_connect_maximumWidthChanged(QWindow* self, intptr_t slot);
void QWindow_maximumHeightChanged(QWindow* self, int arg);
void QWindow_connect_maximumHeightChanged(QWindow* self, intptr_t slot);
void QWindow_visibleChanged(QWindow* self, bool arg);
void QWindow_connect_visibleChanged(QWindow* self, intptr_t slot);
void QWindow_visibilityChanged(QWindow* self, int visibility);
void QWindow_connect_visibilityChanged(QWindow* self, intptr_t slot);
void QWindow_activeChanged(QWindow* self);
void QWindow_connect_activeChanged(QWindow* self, intptr_t slot);
void QWindow_contentOrientationChanged(QWindow* self, int orientation);
void QWindow_connect_contentOrientationChanged(QWindow* self, intptr_t slot);
void QWindow_focusObjectChanged(QWindow* self, QObject* object);
void QWindow_connect_focusObjectChanged(QWindow* self, intptr_t slot);
void QWindow_opacityChanged(QWindow* self, double opacity);
void QWindow_connect_opacityChanged(QWindow* self, intptr_t slot);
void QWindow_transientParentChanged(QWindow* self, QWindow* transientParent);
void QWindow_connect_transientParentChanged(QWindow* self, intptr_t slot);
struct miqt_string QWindow_tr2(const char* s, const char* c);
struct miqt_string QWindow_tr3(const char* s, const char* c, int n);
struct miqt_string QWindow_trUtf82(const char* s, const char* c);
struct miqt_string QWindow_trUtf83(const char* s, const char* c, int n);
void QWindow_setFlag2(QWindow* self, int param1, bool on);
bool QWindow_isAncestorOf2(const QWindow* self, QWindow* child, int mode);
bool QWindow_override_virtual_surfaceType(void* self, intptr_t slot);
int QWindow_virtualbase_surfaceType(const void* self);
bool QWindow_override_virtual_format(void* self, intptr_t slot);
QSurfaceFormat* QWindow_virtualbase_format(const void* self);
bool QWindow_override_virtual_size(void* self, intptr_t slot);
QSize* QWindow_virtualbase_size(const void* self);
bool QWindow_override_virtual_accessibleRoot(void* self, intptr_t slot);
QAccessibleInterface* QWindow_virtualbase_accessibleRoot(const void* self);
bool QWindow_override_virtual_focusObject(void* self, intptr_t slot);
QObject* QWindow_virtualbase_focusObject(const void* self);
bool QWindow_override_virtual_exposeEvent(void* self, intptr_t slot);
void QWindow_virtualbase_exposeEvent(void* self, QExposeEvent* param1);
bool QWindow_override_virtual_resizeEvent(void* self, intptr_t slot);
void QWindow_virtualbase_resizeEvent(void* self, QResizeEvent* param1);
bool QWindow_override_virtual_moveEvent(void* self, intptr_t slot);
void QWindow_virtualbase_moveEvent(void* self, QMoveEvent* param1);
bool QWindow_override_virtual_focusInEvent(void* self, intptr_t slot);
void QWindow_virtualbase_focusInEvent(void* self, QFocusEvent* param1);
bool QWindow_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QWindow_virtualbase_focusOutEvent(void* self, QFocusEvent* param1);
bool QWindow_override_virtual_showEvent(void* self, intptr_t slot);
void QWindow_virtualbase_showEvent(void* self, QShowEvent* param1);
bool QWindow_override_virtual_hideEvent(void* self, intptr_t slot);
void QWindow_virtualbase_hideEvent(void* self, QHideEvent* param1);
bool QWindow_override_virtual_event(void* self, intptr_t slot);
bool QWindow_virtualbase_event(void* self, QEvent* param1);
bool QWindow_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QWindow_virtualbase_keyPressEvent(void* self, QKeyEvent* param1);
bool QWindow_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QWindow_virtualbase_keyReleaseEvent(void* self, QKeyEvent* param1);
bool QWindow_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QWindow_virtualbase_mousePressEvent(void* self, QMouseEvent* param1);
bool QWindow_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QWindow_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* param1);
bool QWindow_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QWindow_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* param1);
bool QWindow_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QWindow_virtualbase_mouseMoveEvent(void* self, QMouseEvent* param1);
bool QWindow_override_virtual_wheelEvent(void* self, intptr_t slot);
void QWindow_virtualbase_wheelEvent(void* self, QWheelEvent* param1);
bool QWindow_override_virtual_touchEvent(void* self, intptr_t slot);
void QWindow_virtualbase_touchEvent(void* self, QTouchEvent* param1);
bool QWindow_override_virtual_tabletEvent(void* self, intptr_t slot);
void QWindow_virtualbase_tabletEvent(void* self, QTabletEvent* param1);
bool QWindow_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QWindow_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QWindow_override_virtual_eventFilter(void* self, intptr_t slot);
bool QWindow_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QWindow_override_virtual_timerEvent(void* self, intptr_t slot);
void QWindow_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QWindow_override_virtual_childEvent(void* self, intptr_t slot);
void QWindow_virtualbase_childEvent(void* self, QChildEvent* event);
bool QWindow_override_virtual_customEvent(void* self, intptr_t slot);
void QWindow_virtualbase_customEvent(void* self, QEvent* event);
bool QWindow_override_virtual_connectNotify(void* self, intptr_t slot);
void QWindow_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QWindow_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QWindow_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QWindow_delete(QWindow* self);