seaqt/QtGui/gen_qwindow.nim

proc fcQWindow_connect_heightChanged(self: pointer, slot: int) {.importc: "QWindow_connect_heightChanged".}
proc fcQWindow_minimumWidthChanged(self: pointer, arg: cint): void {.importc: "QWindow_minimumWidthChanged".}
proc fcQWindow_connect_minimumWidthChanged(self: pointer, slot: int) {.importc: "QWindow_connect_minimumWidthChanged".}
proc fcQWindow_minimumHeightChanged(self: pointer, arg: cint): void {.importc: "QWindow_minimumHeightChanged".}
proc fcQWindow_connect_minimumHeightChanged(self: pointer, slot: int) {.importc: "QWindow_connect_minimumHeightChanged".}
proc fcQWindow_maximumWidthChanged(self: pointer, arg: cint): void {.importc: "QWindow_maximumWidthChanged".}
proc fcQWindow_connect_maximumWidthChanged(self: pointer, slot: int) {.importc: "QWindow_connect_maximumWidthChanged".}
proc fcQWindow_maximumHeightChanged(self: pointer, arg: cint): void {.importc: "QWindow_maximumHeightChanged".}
proc fcQWindow_connect_maximumHeightChanged(self: pointer, slot: int) {.importc: "QWindow_connect_maximumHeightChanged".}
proc fcQWindow_visibleChanged(self: pointer, arg: bool): void {.importc: "QWindow_visibleChanged".}
proc fcQWindow_connect_visibleChanged(self: pointer, slot: int) {.importc: "QWindow_connect_visibleChanged".}
proc fcQWindow_visibilityChanged(self: pointer, visibility: cint): void {.importc: "QWindow_visibilityChanged".}
proc fcQWindow_connect_visibilityChanged(self: pointer, slot: int) {.importc: "QWindow_connect_visibilityChanged".}
proc fcQWindow_activeChanged(self: pointer, ): void {.importc: "QWindow_activeChanged".}
proc fcQWindow_connect_activeChanged(self: pointer, slot: int) {.importc: "QWindow_connect_activeChanged".}
proc fcQWindow_contentOrientationChanged(self: pointer, orientation: cint): void {.importc: "QWindow_contentOrientationChanged".}
proc fcQWindow_connect_contentOrientationChanged(self: pointer, slot: int) {.importc: "QWindow_connect_contentOrientationChanged".}
proc fcQWindow_focusObjectChanged(self: pointer, objectVal: pointer): void {.importc: "QWindow_focusObjectChanged".}
proc fcQWindow_connect_focusObjectChanged(self: pointer, slot: int) {.importc: "QWindow_connect_focusObjectChanged".}
proc fcQWindow_opacityChanged(self: pointer, opacity: float64): void {.importc: "QWindow_opacityChanged".}
proc fcQWindow_connect_opacityChanged(self: pointer, slot: int) {.importc: "QWindow_connect_opacityChanged".}
proc fcQWindow_transientParentChanged(self: pointer, transientParent: pointer): void {.importc: "QWindow_transientParentChanged".}
proc fcQWindow_connect_transientParentChanged(self: pointer, slot: int) {.importc: "QWindow_connect_transientParentChanged".}
proc fcQWindow_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWindow_tr2".}
proc fcQWindow_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWindow_tr3".}
proc fcQWindow_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWindow_trUtf82".}
proc fcQWindow_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWindow_trUtf83".}
proc fcQWindow_setFlag2(self: pointer, param1: cint, on: bool): void {.importc: "QWindow_setFlag2".}
proc fcQWindow_isAncestorOf2(self: pointer, child: pointer, mode: cint): bool {.importc: "QWindow_isAncestorOf2".}
proc fQWindow_virtualbase_surfaceType(self: pointer, ): cint{.importc: "QWindow_virtualbase_surfaceType".}
proc fcQWindow_override_virtual_surfaceType(self: pointer, slot: int) {.importc: "QWindow_override_virtual_surfaceType".}
proc fQWindow_virtualbase_format(self: pointer, ): pointer{.importc: "QWindow_virtualbase_format".}
proc fcQWindow_override_virtual_format(self: pointer, slot: int) {.importc: "QWindow_override_virtual_format".}
proc fQWindow_virtualbase_size(self: pointer, ): pointer{.importc: "QWindow_virtualbase_size".}
proc fcQWindow_override_virtual_size(self: pointer, slot: int) {.importc: "QWindow_override_virtual_size".}
proc fQWindow_virtualbase_accessibleRoot(self: pointer, ): pointer{.importc: "QWindow_virtualbase_accessibleRoot".}
proc fcQWindow_override_virtual_accessibleRoot(self: pointer, slot: int) {.importc: "QWindow_override_virtual_accessibleRoot".}
proc fQWindow_virtualbase_focusObject(self: pointer, ): pointer{.importc: "QWindow_virtualbase_focusObject".}
proc fcQWindow_override_virtual_focusObject(self: pointer, slot: int) {.importc: "QWindow_override_virtual_focusObject".}
proc fQWindow_virtualbase_exposeEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_exposeEvent".}
proc fcQWindow_override_virtual_exposeEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_exposeEvent".}
proc fQWindow_virtualbase_resizeEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_resizeEvent".}
proc fcQWindow_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_resizeEvent".}
proc fQWindow_virtualbase_moveEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_moveEvent".}
proc fcQWindow_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_moveEvent".}
proc fQWindow_virtualbase_focusInEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_focusInEvent".}
proc fcQWindow_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_focusInEvent".}
proc fQWindow_virtualbase_focusOutEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_focusOutEvent".}
proc fcQWindow_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_focusOutEvent".}
proc fQWindow_virtualbase_showEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_showEvent".}
proc fcQWindow_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_showEvent".}
proc fQWindow_virtualbase_hideEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_hideEvent".}
proc fcQWindow_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_hideEvent".}
proc fQWindow_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QWindow_virtualbase_event".}
proc fcQWindow_override_virtual_event(self: pointer, slot: int) {.importc: "QWindow_override_virtual_event".}
proc fQWindow_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_keyPressEvent".}
proc fcQWindow_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_keyPressEvent".}
proc fQWindow_virtualbase_keyReleaseEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_keyReleaseEvent".}
proc fcQWindow_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_keyReleaseEvent".}
proc fQWindow_virtualbase_mousePressEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_mousePressEvent".}
proc fcQWindow_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_mousePressEvent".}
proc fQWindow_virtualbase_mouseReleaseEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_mouseReleaseEvent".}
proc fcQWindow_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_mouseReleaseEvent".}
proc fQWindow_virtualbase_mouseDoubleClickEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_mouseDoubleClickEvent".}
proc fcQWindow_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_mouseDoubleClickEvent".}
proc fQWindow_virtualbase_mouseMoveEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_mouseMoveEvent".}
proc fcQWindow_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_mouseMoveEvent".}
proc fQWindow_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_wheelEvent".}
proc fcQWindow_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_wheelEvent".}
proc fQWindow_virtualbase_touchEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_touchEvent".}
proc fcQWindow_override_virtual_touchEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_touchEvent".}
proc fQWindow_virtualbase_tabletEvent(self: pointer, param1: pointer): void{.importc: "QWindow_virtualbase_tabletEvent".}
proc fcQWindow_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_tabletEvent".}
proc fQWindow_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QWindow_virtualbase_nativeEvent".}
proc fcQWindow_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_nativeEvent".}
proc fQWindow_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QWindow_virtualbase_eventFilter".}
proc fcQWindow_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QWindow_override_virtual_eventFilter".}
proc fQWindow_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QWindow_virtualbase_timerEvent".}
proc fcQWindow_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_timerEvent".}
proc fQWindow_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QWindow_virtualbase_childEvent".}
proc fcQWindow_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_childEvent".}
proc fQWindow_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QWindow_virtualbase_customEvent".}
proc fcQWindow_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QWindow_override_virtual_customEvent".}
proc fQWindow_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QWindow_virtualbase_connectNotify".}
proc fcQWindow_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QWindow_override_virtual_connectNotify".}
proc fQWindow_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QWindow_virtualbase_disconnectNotify".}
proc fcQWindow_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QWindow_override_virtual_disconnectNotify".}
proc fcQWindow_delete(self: pointer) {.importc: "QWindow_delete".}


func init*(T: type gen_qwindow_types.QWindow, h: ptr cQWindow): gen_qwindow_types.QWindow =
  T(h: h)
proc create*(T: type gen_qwindow_types.QWindow, ): gen_qwindow_types.QWindow =
  gen_qwindow_types.QWindow.init(fcQWindow_new())

proc create*(T: type gen_qwindow_types.QWindow, parent: gen_qwindow_types.QWindow): gen_qwindow_types.QWindow =
  gen_qwindow_types.QWindow.init(fcQWindow_new2(parent.h))

proc create*(T: type gen_qwindow_types.QWindow, screen: gen_qscreen_types.QScreen): gen_qwindow_types.QWindow =
  gen_qwindow_types.QWindow.init(fcQWindow_new3(screen.h))

proc metaObject*(self: gen_qwindow_types.QWindow, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQWindow_metaObject(self.h))

proc metacast*(self: gen_qwindow_types.QWindow, param1: cstring): pointer =
  fcQWindow_metacast(self.h, param1)

proc tr*(_: type gen_qwindow_types.QWindow, s: cstring): string =
  let v_ms = fcQWindow_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qwindow_types.QWindow, s: cstring): string =
  let v_ms = fcQWindow_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setSurfaceType*(self: gen_qwindow_types.QWindow, surfaceType: cint): void =
  fcQWindow_setSurfaceType(self.h, cint(surfaceType))

proc surfaceType*(self: gen_qwindow_types.QWindow, ): cint =
  cint(fcQWindow_surfaceType(self.h))
